<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2222F4"
    tools:context=".ui.auth.PhoneNumber">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="-100dp"
        app:cardCornerRadius="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:paddingHorizontal="30dp"
                android:text="@string/help_number" />

<!--            to always view prefix-->
            <!--            app:expandedHintEnabled="false"-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_number"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:prefixText="+91"
                app:prefixTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_get_otp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/send_otp"
                android:textSize="20sp"
                app:cornerRadius="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/terms_condition" />


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>